--- a/photo-effects/src/index.css
+++ b/photo-effects/src/index.css
@@ -20,7 +20,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
+	font-family: 'Quicksand', sans-serif;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -50,4 +50,8 @@ table {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+:root{
+  font-size:62.5%
 }
