--- a/photo-effects/src/index.css
+++ b/photo-effects/src/index.css
@@ -20,7 +20,8 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font-family: 'Quicksand', sans-serif;
+	font-family: 'Nunito Sans', sans-serif;
+	font-weight: 400;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -53,7 +54,7 @@ table {
 }
 
 :root{
-	font-size:62.5%
+	/* font-size:62.5% */
 }
 html {
 	/* overflow: hidden; */
