--- a/photo-effects/src/components/waterfall/waterfall.css
+++ b/photo-effects/src/components/waterfall/waterfall.css
@@ -8,5 +8,6 @@
   height: 100%;
   background-image:linear-gradient(to right bottom, #6600d6, #5800d5, #4700d5, #3100d4, #0000d3);
   padding-top: 40px;
+  height:100%;
 }
 
