replaced missing auth0 code

--- a/photo-effects/src/components/Landing/Tags/tagscont.css
+++ b/photo-effects/src/components/Landing/Tags/tagscont.css
@@ -3,7 +3,7 @@
   border-bottom: 1px solid green;
   padding-bottom: 10px;
   padding-top: 8px;
-  background: #171544;
+  background-color: #364f6b;
   color: whitesmoke
 }
 
