--- a/photo-effects/src/components/waterfall/waterfall.css
+++ b/photo-effects/src/components/waterfall/waterfall.css
@@ -1,12 +1,12 @@
 .waterfallcont{
-  background-color: #171544;
+  background-color: #FC5185;
   color: whitesmoke;
   margin: auto;
   text-align: center;
   font-size: 5rem;
   opacity: 0.9;
   height: 100%;
-  background-image:linear-gradient(to right bottom, #6600d6, #5800d5, #4700d5, #3100d4, #0000d3);
+  /* background-image:linear-gradient(to right bottom, #6600d6, #5800d5, #4700d5, #3100d4, #0000d3); */
   padding-top: 40px;
   height:100%;
 }
