--- a/photo-effects/src/index.css
+++ b/photo-effects/src/index.css
@@ -20,8 +20,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font-family: 'Nunito Sans', sans-serif;
-	font-weight: 400;
+	font-family: 'Quicksand', sans-serif;
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -54,7 +53,7 @@ table {
 }
 
 :root{
-	/* font-size:62.5% */
+	font-size:62.5%
 }
 html {
 	/* overflow: hidden; */
