Added more styling to dashboard. Changed error message for unsupported files, tested dragndrop on local. Need to test on netlify

--- a/photo-effects/src/components/Dashboard/Upload/upload.css
+++ b/photo-effects/src/components/Dashboard/Upload/upload.css
@@ -1,36 +1,23 @@
 
 
 .uploadBox {
-    padding: 100px;
+    max-width: 600px;
+    margin: 0 auto;
+    /* border: 1px solid black; */
+} 
+
+
+.dragBox {
+    margin: 0 auto;
+    max-width: 600px;
+    padding: 150px 100px;
+    font-size: 4rem;
+    border: 1px dashed black;
+    border-radius: 5px;
 }
 
-
-.hi {
-    font-size: 5rem;
-    border: 8px solid black;
+.dragBox:hover {
+    background: #364f6b;
+    filter: brightness(150%);
+    opacity: 0.7;
 }
-
-/* 
-.inputFile {
-    width: 0.1px;
-    height: 0.1px;
-    opacity: 0;
-    overflow: hidden;
-    position: absolute;
-    z-index: -1;
-} */
-
-/* .inputFile + label {
-    background-color: #fc5185;
-    padding: 12px;
-    border-radius: 8px;
-    color: whitesmoke;
-    box-shadow: -1px 1px 90px -2px rgba(240,240,240,1);
-    border: none;
-    font-size:2rem;
-    cursor: pointer;
-}
-
-.inputFile + label:hover {
-    filter: brightness(110%);
-} */
