--- a/photo-effects/src/components/Dashboard/DashNav/dashNav.css
+++ b/photo-effects/src/components/Dashboard/DashNav/dashNav.css
@@ -57,7 +57,7 @@
 
   /* Dashboard */
   .welcome {
-      padding-top: 16vh;
+      padding-top: 20vh;
       font-size: 3.5rem;
       width: 95%;
       margin: 0 auto;
@@ -71,4 +71,9 @@
 
   .center h2 {
     font-size: 4.6rem;
+  }
+
+  .errorBox {
+    margin-top: 10px;
+    font-size: 2rem;
   }
