--- a/photo-effects/src/components/Dashboard/DashNav/dashNav.css
+++ b/photo-effects/src/components/Dashboard/DashNav/dashNav.css
@@ -23,6 +23,11 @@
     justify-content: space-between;
     margin: 8px;
   }
+
+  .dashNavLinks a {
+    text-decoration: none;
+    color: white;
+  }
   
   .dashNavRight{
     width: 200px;
