--- a/photo-effects/src/components/Dashboard/Upload/upload.css
+++ b/photo-effects/src/components/Dashboard/Upload/upload.css
@@ -18,7 +18,9 @@
 }
 
 .dragBox:hover {
-    background: #364f6b;
-    filter: brightness(150%);
-    opacity: 0.7;
+    filter: brightness(95%);
+    opacity: 0.8;
+    transform: scale(1.03);
+    transition: ease-in-out 0.1s;
 }
+
