fine tuned the styling for the projects section of the dashboard

--- a/photo-effects/src/components/Dashboard/Projects/projects.css
+++ b/photo-effects/src/components/Dashboard/Projects/projects.css
@@ -10,9 +10,23 @@
     width: 95%;
     height: 100%;
     margin: 0 auto;
-    margin-top: 100px;
     padding-bottom: 5%;
+}
 
+.projects-section-title {
+    color: #364f6b;
+    background: #ffdb27;
+    width: 10%;
+    height: 30px;;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: +3;
+    margin: 0 auto;
+    margin-top: 100px;
+    margin-bottom: 15px;
+    font-size: 2rem;
+    border-radius: 5px;
 }
 
 .uploaded-img {
@@ -34,7 +48,7 @@
     padding-bottom: 5px;
     display: flex;
     justify-content: space-around;
-    font-size: 115%;
+    font-size: 1.2rem;
 }
 
 .project-container {
