--- a/photo-effects/src/components/Dashboard/Projects/projects.css
+++ b/photo-effects/src/components/Dashboard/Projects/projects.css
@@ -24,15 +24,15 @@
     z-index: +3;
     margin: 0 auto;
     margin-top: 100px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     font-size: 2rem;
     border-radius: 5px;
 }
 
 .uploaded-img {
    flex: 0 0 auto;
-   width: 125px;
-   height: 125px;
+   width: 16rem;
+   height: 16rem;
    border: 0px solid #000;
    padding: 5px;
    margin-right: 6px;
