--- a/photo-effects/src/layout/TextBox/textBox.css
+++ b/photo-effects/src/layout/TextBox/textBox.css
@@ -1,3 +1,12 @@
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 600px;
+    margin: auto;
+    border: 1px black solid
+}
+
 .text-box {
     height: 300px;
     width: 500px;
