Styled the landing page to be more erganomic

--- a/photo-effects/src/components/Landing/Hero/hero.css
+++ b/photo-effects/src/components/Landing/Hero/hero.css
@@ -13,7 +13,7 @@
 }
 
 .herobg{
-  height: 700px;
+  height: 600px;
 
 
 }
@@ -24,7 +24,8 @@
 }
 
 .title{
-  font-size: 10.5rem;
+  margin-top: 50px;
+  font-size: 8rem;
   color: whitesmoke;
   width: 35%;
   text-shadow: -2px 1px 1px rgb(40, 5, 145);
@@ -35,7 +36,7 @@
   border: whitesmoke 1px solid;
   border-radius: 8px;
   width:40%;
-  height: 500px;
+  height: 350px;
 }
 
 .cards:hover{
@@ -53,7 +54,7 @@
 
 @media (max-width: 1615px) {
   .title {
-    font-size: 10rem;
+    font-size: 8rem;
   }
 }
 
