Refined styling and file structure.

--- a/photo-effects/src/layout/Canvas/layout/ToolsArea/ToolPanel.css
+++ b/photo-effects/src/layout/Canvas/layout/ToolsArea/ToolPanel.css
@@ -1,6 +1,9 @@
 .panel-container {
-  background: #f4f4f4;
-  height: 140px;
+  background: #d0d0d0;
+}
+
+.panel-toparea-container {
+  height: 155px;
   font-size: 10px;
   font-weight: 700;
 }
@@ -32,7 +35,7 @@
   padding-left: 15px;
 }
 .panelbutton.home:hover {
-  background: #FC5185;
+  background: #626262;
   opacity: 0.9;
 }
 .panelbutton.settings {
@@ -44,7 +47,7 @@
   margin-left: -45px;
 }
 .panelbutton.settings:hover {
-  background: #FFDB27;
+  background: #626262;
   opacity: 0.9;
 }
 .panelbutton.download {
@@ -56,7 +59,7 @@
   padding-left: 16px;
 }
 .panelbutton.download:hover {
-  background: #44DDE6;
+  background: #626262;
   opacity: 0.9;
 }
 .panelbutton.download > div {
@@ -85,7 +88,7 @@
 .panel-projectname {
   float: right;
   margin-right: 40px;
-  margin-top: -15px;
+  margin-top: 0px;
   font-weight: 700;
 }
 .panel-projectname input {
@@ -109,6 +112,7 @@
   font-size: 12px;
   font-weight: 700;
   height: 45px;
+  width: 340px;
 }
 .panel-tab .panel-tab-info {
   display: flex;
@@ -136,6 +140,7 @@
 .tab-content {
   background: #f4f4f4;
   padding: 10px 20px;
+  width: 340px;
 }
 
 .tab-content-subcontainer {
@@ -161,15 +166,25 @@
   background: #FC5185;
 }
 
+.tab-content-button-active {
+  background: #FC5185;
+}
+
 .tab-content-photos {
   position: relative;
-  height: 100px;
+  height: 90px;
   overflow-y: hidden;
   display: flex;
   flex-wrap: nowrap;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
 }
 .tab-content-photos .photo {
+  position: relative;
+  height: 100%;
+  width: auto;
+}
+.tab-content-photos .photo img {
+  position: relative;
   height: 100%;
   width: auto;
   border: 0px;
@@ -177,6 +192,90 @@
   background: #d0d0d0;
   cursor: pointer;
   margin-right: 5px;
+}
+.tab-content-photos .photo::after {
+  content: "+";
+  position: absolute;
+  top: 65px;
+  left: calc(100% - 50% - 15px);
+  width: 25px;
+  height: 25px;
+  border-radius: 15px;
+  background: #44DDE6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  cursor: pointer;
+  font-size: 24px;
+  font-weight: 700;
+  display: flex;
+  justify-content: baseline;
+  align-items: baseline;
+  color: #3b3f42;
+}
+.tab-content-photos .photo:hover::after {
+  opacity: 1;
+}
+.tab-content-photos .photo-loading {
+  height: 80px;
+  width: 100px;
+  border: 0px;
+  border-radius: 5px;
+  margin-right: 5px;
+}
+.tab-content-photos .cyan {
+  background: #44DDE6;
+  opacity: 0.7;
+}
+.tab-content-photos .pink {
+  background: #FC5185;
+  opacity: 0.7;
+}
+.tab-content-photos .yellow {
+  background: #FFDB27;
+  opacity: 0.7;
+}
+.tab-content-photos .graphic {
+  height: 100%;
+  width: auto;
+  border: 0px;
+  border-radius: 5px;
+  background: #eaeaea;
+  cursor: pointer;
+  margin-right: 5px;
+  padding: 5px;
+}
+
+.text-add {
+  width: 300px;
+  height: 25px;
+  background: #44DDE6 0% 0% no-repeat padding-box;
+  border-radius: 13px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font: Bold 12px/15px Helvetica Neue;
+  cursor: pointer;
+}
+.text-add img {
+  margin-right: 10px;
+}
+
+.panel-layer {
+  width: 300px;
+  height: 25px;
+  background: #d0d0d0 0% 0% no-repeat padding-box;
+  border-radius: 13px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font: Bold 12px/15px Helvetica Neue;
+  cursor: pointer;
+  margin-bottom: 3px;
+}
+.panel-layer img {
+  margin-right: 10px;
 }
 
 /*# sourceMappingURL=ToolPanel.css.map */
