--- a/photo-effects/src/layout/Canvas/layout/ToolsArea/ToolPanel.scss
+++ b/photo-effects/src/layout/Canvas/layout/ToolsArea/ToolPanel.scss
@@ -1,5 +1,6 @@
 $font-stack: Helvetica, sans-serif;
 $panel-gray-dark: #3b3f42;
+$panel-gray-08: #626262;
 $panel-gray: #d0d0d0;
 $panel-gray-light: #eaeaea;
 $panel-gray-lighter: #f4f4f4;
@@ -9,8 +10,11 @@ $accent-cyan: #44DDE6;
 $accent-yellow: #FFDB27;
 
 .panel-container {
-   background: $panel-gray-lighter;
-   height: 140px;
+   background: $panel-gray;
+}
+
+.panel-toparea-container {
+   height: 155px;
    font-size: 10px;
    font-weight: 700;
 }
@@ -50,7 +54,7 @@ $accent-yellow: #FFDB27;
       padding-left: 15px;
 
       &:hover {
-         background: $accent-pink;
+         background: $panel-gray-08;
          opacity: .9
       }
    }
@@ -64,8 +68,8 @@ $accent-yellow: #FFDB27;
       margin-left: -45px;
 
       &:hover {
-         background: $accent-yellow;
-         opacity: .9
+         background: $panel-gray-08;
+         opacity: .9;
       }
    }
 
@@ -78,7 +82,7 @@ $accent-yellow: #FFDB27;
       padding-left: 16px;
       
       &:hover {
-         background: $accent-cyan;
+         background: $panel-gray-08;
          opacity: .9
       }
 
@@ -112,7 +116,7 @@ $accent-yellow: #FFDB27;
 .panel-projectname {
    float: right;
    margin-right: 40px;
-   margin-top: -15px;
+   margin-top: 0px;
    font-weight: 700;
 
    input {
@@ -138,6 +142,7 @@ $accent-yellow: #FFDB27;
    font-size: 12px;
    font-weight: 700;
    height: 45px;
+   width: 340px;
 
    .panel-tab-info {
       display: flex;
@@ -169,6 +174,7 @@ $accent-yellow: #FFDB27;
 .tab-content {
    background: $panel-gray-lighter;
    padding:  10px 20px;
+   width: 340px;
 }
 
 .tab-content-subcontainer {
@@ -196,25 +202,125 @@ $accent-yellow: #FFDB27;
    }
 }
 
+.tab-content-button-active {
+   background: $accent-pink;
+}
+
 .tab-content-photos {
    position: relative;
-   height: 100px;
+   height: 90px;
    overflow-y: hidden;
    display: flex;
    flex-wrap: nowrap;
-   padding-bottom: 20px;
-
-   &::after {
-      
-   }
+   padding-bottom: 10px;
 
    .photo {
+      position: relative;
+      height: 100%;
+      width: auto;
+
+      img {
+         position: relative;
+         height: 100%;
+         width: auto;
+         border: 0px;
+         border-radius: 5px;
+         background: $panel-gray;
+         cursor: pointer;
+         margin-right: 5px;
+      }
+
+      &::after {
+         content: '+';
+         position: absolute;
+         top: 65px;
+         left: calc(100% - 50% - 15px);
+         width: 25px;
+         height: 25px;
+         border-radius: 15px;
+         background: $accent-cyan;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         opacity: 0;
+         cursor: pointer;
+         font-size: 24px;
+         font-weight: 700;
+         display: flex;
+         justify-content: baseline;
+         align-items: baseline;
+         color: $panel-gray-dark;
+      }
+
+      &:hover::after {
+         opacity: 1;
+      }
+   }
+
+   .photo-loading {
+      height: 80px;
+      width: 100px;
+      border: 0px;
+      border-radius: 5px;
+      margin-right: 5px;
+   }
+
+   .cyan {
+      background: $accent-cyan;
+      opacity: .7;
+   }
+
+   .pink {
+      background: $accent-pink;
+      opacity: .7;
+   }
+
+   .yellow {
+      background: $accent-yellow;
+      opacity: .7;
+   }
+
+   .graphic {
       height: 100%;
       width: auto;
       border: 0px;
       border-radius: 5px;
-      background: $panel-gray;
+      background: $panel-gray-light;
       cursor: pointer;
       margin-right: 5px;
+      padding: 5px;
+   }
+}
+
+.text-add {
+   width: 300px;
+   height: 25px;
+   background: #44DDE6 0% 0% no-repeat padding-box;
+   border-radius: 13px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font: Bold 12px/15px Helvetica Neue;
+   cursor: pointer;
+
+   img {
+      margin-right: 10px;
+   }
+}
+
+.panel-layer {
+   width: 300px;
+   height: 25px;
+   background: $panel-gray 0% 0% no-repeat padding-box;
+   border-radius: 13px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font: Bold 12px/15px Helvetica Neue;
+   cursor: pointer;
+   margin-bottom: 3px;
+
+   img {
+      margin-right: 10px;
    }
 }
