Co-authored-by: claridiva2000 <claridiva2000@gmail.com>

--- a/photo-effects/src/components/Dashboard/DashNav/dashNav.css
+++ b/photo-effects/src/components/Dashboard/DashNav/dashNav.css
@@ -1,10 +1,14 @@
 
+.background {
+  background-image: linear-gradient(to bottom, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa4e9, #7aaeef, #6bb7f1, #56c2f4, #44cbf3, #3bd5ee, #43dde6);
+}
+
 .dashNav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 14vh;
+    height: 12vh;
     background-color: #364f6b;
     color: whitesmoke;
     font-size: 2rem;
@@ -62,10 +66,14 @@
 
   /* Dashboard */
   .welcome {
-      padding-top: 20vh;
+      padding-top: 15vh;
       font-size: 3.5rem;
       width: 95%;
       margin: 0 auto;
+  }
+
+  .welcome h1 {
+    font-size: 2.0rem;
   }
 
   .center {
