--- a/photo-effects/src/components/Dashboard/Projects/projects.css
+++ b/photo-effects/src/components/Dashboard/Projects/projects.css
@@ -5,39 +5,54 @@
     justify-content: center;
     height: 200px;
     align-items: center;
-    background: #1F2933;
+    background: #364f6b;
     flex-wrap: wrap;
     width: 95%;
     height: 100%;
     margin: 0 auto;
     padding-bottom: 5%;
+    border-radius: 8px;
+    
 }
+
+.sortBox {
+    display: flex;
+    justify-content: space-between;
+    width: 95%;
+    margin: 0 auto;
+    margin-bottom: 5px
+}
+
 
 .sort {
     background-color: #fc5185;
-    padding: 12px;
+    padding: 4px 10px;
     border-radius: 8px;
     color: whitesmoke;
-    box-shadow: -1px 1px 90px -2px rgba(240,240,240,1);
-    border: none;
     font-size:2rem;
     cursor: pointer;
+}
+
+.sort:hover {
+    filter: brightness(110%);
+    transform: scale(1.1);
+    transition: ease-in-out 0.1s;
 }
 
 .projects-section-title {
     color: #364f6b;
     background: #ffdb27;
-    width: 10%;
-    height: 30px;;
+    width: 15%;
+    height: 35px;;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: +3;
     margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 10px;
-    font-size: 2rem;
-    border-radius: 5px;
+    font-size: 3.0rem;
+    border-radius: 7px;
 }
 
 .uploaded-img {
@@ -51,6 +66,13 @@
    border-radius: 5px;
    background: #7B8794;
    cursor: pointer;
+   box-shadow: rgb(67, 221, 230) 0.5px 1px 1px 2px;
+}
+
+.uploaded-img:hover {
+    transform: scale(1.05);
+    transition: ease-in-out 0.1s;
+    cursor: pointer;
 }
 
 .uploaded-img-title {
@@ -59,8 +81,9 @@
     padding-bottom: 5px;
     display: flex;
     justify-content: space-around;
-    font-size: 1.2rem;
+    font-size: 1.6rem;
 }
+
 
 .project-container {
     display: flex;
@@ -72,11 +95,15 @@
     padding-bottom: 0%;
 }
 
+
+
 .project-delete-button {
     background-color: #fc5185;
     border: none;
     border-radius: 5px;;
-    padding: 2%;
+    padding: 4px 5px;
+    margin-top: 3px;
     color: whitesmoke;
     cursor: pointer;
+    font-size: 1.4rem;
 }
