--- a/photo-effects/src/components/Dashboard/Projects/projects.css
+++ b/photo-effects/src/components/Dashboard/Projects/projects.css
@@ -3,36 +3,67 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 200px;
+    /* height: 200px; */
     align-items: center;
-    background: #1F2933;
+    background: #364f6b;
     flex-wrap: wrap;
     width: 95%;
     height: 100%;
     margin: 0 auto;
     padding-bottom: 5%;
+    padding-top: 65px;
+    border-radius: 8px;  
+}
+
+.sortBox {
+    display: flex;
+    justify-content: space-between;
+    width: 95%;
+    margin: 0 auto;
+    margin-bottom: 5px
+}
+
+
+.sort {
+    background-color: #fc5185;
+    padding: 4px 10px;
+    border-radius: 8px;
+    color: whitesmoke;
+    font-size:2rem;
+    cursor: pointer;
+}
+
+.sort:hover {
+    filter: brightness(110%);
+    transform: scale(1.1);
+    transition: ease-in-out 0.1s;
 }
 
 .projects-section-title {
-    color: #364f6b;
-    background: #ffdb27;
-    width: 10%;
-    height: 30px;;
+    position: relative;
+    top: 100px;
+    color: whitesmoke;
+    background: #fc5185;
+    width: 130px;
+    height: 35px;;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: +3;
     margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 10px;
-    font-size: 2rem;
-    border-radius: 5px;
+    padding: 20px;
+    font-size: 3.0rem;
+    border-radius: 7px;
+    text-decoration: underline;
+    border: 1px solid whitesmoke;
 }
 
 .uploaded-img {
    flex: 0 0 auto;
-   width: 16rem;
-   height: 16rem;
+   width: 20rem;
+   height: 20rem;
    border: 0px solid #000;
    padding: 5px;
    margin-right: 6px;
@@ -40,6 +71,13 @@
    border-radius: 5px;
    background: #7B8794;
    cursor: pointer;
+   /* box-shadow: rgb(67, 221, 230) 0.5px 1px 1px 2px; */
+}
+
+.uploaded-img:hover {
+    transform: scale(1.05);
+    transition: ease-in-out 0.1s;
+    cursor: pointer;
 }
 
 .uploaded-img-title {
@@ -47,25 +85,36 @@
     color: whitesmoke;
     padding-bottom: 5px;
     display: flex;
-    justify-content: space-around;
-    font-size: 1.2rem;
+    justify-content: center;
+    text-align: center;
+    font-size: 1.8rem;
 }
+
 
 .project-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 25%;
-    padding: 5% 0% 0% 0%;
-    padding-bottom: 0%;
+    width: 275px;
+    padding: 15px;
+    margin: 10px;
+    /* background: linear-gradient(to bottom, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa4e9, #7aaeef, #6bb7f1 
+, #56c2f4, #44cbf3, #3bd5ee, #43dde6); */
+    /* background: rgb(240, 240, 240); */
+    border-radius: 8px;
+    /* box-shadow: #f5f5f5 -1px 1px 5px 2px; */
 }
+
+
 
 .project-delete-button {
     background-color: #fc5185;
     border: none;
     border-radius: 5px;;
-    padding: 2%;
+    padding: 4px 5px;
+    margin-top: 3px;
     color: whitesmoke;
     cursor: pointer;
-}
+    font-size: 1.4rem;
+} 
