--- a/photo-effects/src/components/Landing/Hero/hero.css
+++ b/photo-effects/src/components/Landing/Hero/hero.css
@@ -2,111 +2,77 @@
   display: flex;
   justify-content: space-around;
   align-content: center;
-  padding-top: 120px;
+  padding-top: 100px;
   position: absolute;
   margin: auto;
   width: 100%;
   top:60px
-
-
   
 }
-
 .herobg{
-  height: 700px;
-
-
+  height: 600px;
 }
-
 .particles{
   height: 100%;
   z-index:-1;
 }
-
 .title{
-  font-size: 13rem;
+  margin-top: 50px;
+  font-size: 8rem;
   color: whitesmoke;
-  width: 30%;
+  width: 35%;
   text-shadow: -2px 1px 1px rgb(40, 5, 145);
 }
-
 .video{
   box-shadow: -2px 1px 3px rgb(40, 5, 145);
   border: whitesmoke 1px solid;
   border-radius: 8px;
   width:40%;
-  height: 500px;
+  height: 350px;
 }
-
-
-
-
+.cards:hover{
+  transition: transform .5s;
+  transform: scale(1.05);
+}
 /*  Media Queries */
-
-
 /*  View between Full screen and Tablet */
-
-
 @media (max-width: 1615px) {
   .title {
-    font-size: 10rem;
+    font-size: 8rem;
   }
 }
-
-
 /*  Tablet View */
-
 @media (max-width: 800px) {
-
   .hero {
     display: flex;
     flex-direction: column;
     padding-top: 78px;
-
   }
-
 .title {
 font-size: 4.5rem;
 width: 100%;
 margin-bottom: 30px;
 text-align: center;
-
-
-
 }
-
 .video {
   margin:auto;
 width: 95%;
 height: 275px;
 }
-
 .herobg{
   height: 475px;
-
-
 }
-
 }
-
-
 /* Mobile View */
-
-
 @media (max-width: 500px) {
-
-
   .hero {
     display: flex;
     flex-direction: column;
     padding-top: 55px;
-
   }
-
   .video {
     margin:auto;
   width: 95%;
   height: 250px;
   }
-
 }
