--- a/photo-effects/src/components/waterfall/waterfall.css
+++ b/photo-effects/src/components/waterfall/waterfall.css
@@ -1,5 +1,5 @@
 .waterfallcont{
-  background-color: #FC5185;
+  background-image: linear-gradient(to bottom, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa4e9, #7aaeef, #6bb7f1, #56c2f4, #44cbf3, #3bd5ee, #43dde6);
   color: whitesmoke;
   margin: auto;
   text-align: center;
@@ -10,4 +10,3 @@
   padding-top: 40px;
   height:100%;
 }
-
