--- a/photo-effects/src/components/Dashboard/DashNav/dashNav.css
+++ b/photo-effects/src/components/Dashboard/DashNav/dashNav.css
@@ -17,16 +17,23 @@
     font-weight: bold;
   }
 
+  .navBarLogo {
+    margin-left: 80px;
+  height: 60px;
+  width: 150px;
+  }
   .dashNavLinks {
     display: flex;
     align-items: baseline;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin: 8px;
+    margin-right: 30px;
   }
 
   .dashNavLinks a {
     text-decoration: none;
     color: white;
+    padding: 0 10px;
   }
   
   .dashNavRight{
