mobile styling/functionality on canvas. tested on ios

--- a/photo-effects/src/index.css
+++ b/photo-effects/src/index.css
@@ -55,6 +55,8 @@ table {
 :root{
 	font-size:62.5%
 }
-html {
-	/* overflow: hidden; */
+
+.mobile {
+	overflow: hidden !important;
+	max-height: 100vh !important;
 }
